updated at: 2023-04-25 16:45, KA-03 ASR &quot;Brionac&quot; - 消しゴムの筆箱 - BOOTH

--- a/VRChat/27/1219827.html
+++ b/VRChat/27/1219827.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CHUpBC+ASmYwLsZL2f+h4ujyxpMlhwMEvZzNoHBCg74="></script>
+    "TUmXiNmm4zK8SIxP2A4zHQ6s2O/unIugahL67BPqO/I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"KA-03 ASR \"Brionac\"","description":"KA-03 ASR \"Brionac\"\n巨大な銃身から撃ち出される弾丸は、神話の槍の如く全てを貫き焼き尽くす。\n3cmAPFSDSの劣化ウラン弾は戦車、ヘリ、艦船の装甲を容易に侵徹し、内部を焼夷することで無力化する。\n無骨な外見だが最新技術が投入されており、過去に小銃では技術不足によって採用に至らなかったAPFSDS弾を使用し、ボルトアクションを自動で行う。\nアンドロイドや強化外骨格が携行することを想定し、その巨躯、重量ながら銃身を折り畳むことができる。","url":"https://booth.pm/ja/items/1219827","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"800","highPrice":"1200"},"image":"https://booth.pximg.net/c/620x620/3713aef5-42d6-43d4-b456-e2fe144cfcc8/i/1219827/26adce4b-a0c5-4a47-bab8-6cb8706f3a0f_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CHUpBC+ASmYwLsZL2f+h4ujyxpMlhwMEvZzNoHBCg74="></script>
+    nonce="TUmXiNmm4zK8SIxP2A4zHQ6s2O/unIugahL67BPqO/I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1219827/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               117
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1219827/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               117
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
