updated at: 2023-04-25 16:45, 心臓（低ポリゴン、リアル） - 大黒屋O-To-san - BOOTH

--- a/VRChat/79/1219579.html
+++ b/VRChat/79/1219579.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iIyFPZYgD3FsXuJgF+21RrQjAJXgB2xjmAASDSPzJ3g="></script>
+    "MbPrwjOkTXDcPB5NLvoIzq8jZtojnxC4viuy7lEdL2Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"心臓（低ポリゴン、リアル）","description":"VRChatでの使用を想定した△1890ポリゴンの心臓3Dモデルです。\nVRChatに限らず様々な用途でご利用いただけます。\n適切なサイズに合わせてご利用ください。\n\nシェイプキーによって鼓動の再現ができます。サンプルの動きはアニメーションにて既に設定してあります。\n\n内容物\n・fbxファイル\n・テクスチャ（PNG）\n・ノーマルマップ\nVRChatでの使用を想定した△1890ポリゴンの心臓3Dモデルです。\nVRChatに限らず様々な用途でご利用いただけます。\n適切なサイズに合わせてご利用ください。\n\nシェイプキーによって鼓動の再現ができます。サンプルの動きはアニメーションにて既に設定してあります。\n訂正\nそのままでは動かないみたいなので、心臓のオブジェクトにアニメーションを設定してあげてください\n\n内容物\n・fbxファイル\n・テクスチャ（PNG）\n・ノーマルマップ\n・Unitypackage（Unityにて開きます。サンプルのマテリアル、アニメーションが設定されています。）\n\nグロテスクな形をしていますので、使用の際は嫌がる人がいたらやめる等周囲への配慮をお願いします\n\n※2019/03/14更新\n Unitypackage追加とそれに伴うマテリアル、アニメーションファイルの削除\n 意味をなしていなかったUnityファイルの削除\n※2019/05/13更新\n マテリアルなどを適応させたprefabを追加。\n サンプル画像と同じものを作りたい場合に単純に作業時間が短縮できます","url":"https://booth.pm/ja/items/1219579","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/ba7f3e00-a1bf-46d0-96b2-b333ec40ae45/i/1219579/e742f420-2424-4156-bf81-6b8a03315a92_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iIyFPZYgD3FsXuJgF+21RrQjAJXgB2xjmAASDSPzJ3g="></script>
+    nonce="MbPrwjOkTXDcPB5NLvoIzq8jZtojnxC4viuy7lEdL2Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1219579/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               419
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1219579/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               419
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
