--- a/VRChat/83/1219583.html
+++ b/VRChat/83/1219583.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NlJa188FsqCFVquPOYyq2BcN0d4gJ/pHvoz5nyjBwMU="></script>
+    "5fwcDiWLGce1/TfdqVEUSa8dFfEmrRIhluj/fwBBVIE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRoadCaster公式コンプリートガイド","description":"【お知らせ】\n2019/03/28 VRoadCaster2期最終回SP放送＆書籍版完売を記念して、電子書籍版の頒布を開始しました。右側のバリエーションから選択ください。\n\n2019/02/10 初版第一刷発行\n2019/02/12 　　第二刷発行\n2019/03/29 電子書籍版発行\n\nバーチャルなクリエイター達がお送りするVR放送局VRoadCasterの公式ガイドブックが発売！\nVRニュース番組「V-TV」や、バーチャルタレント達のエンタメ番組「Vさわぎ」など、番組のメイキングからメンバーのプロフィールまで、ここだけの㊙情報が満載の大容量56P！\n\nYouTubeチャンネルhttps://www.youtube.com/channel/UC4NiGZqQQvpvNvwcJsm_EAg\n\n公式Twitter\nhttps://twitter.com/vroadcaster\n\nB5/56P/モノクロ","url":"https://booth.pm/ja/items/1219583","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1000","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/17f85282-aa98-462c-9120-894de60dec0a/i/1219583/1ed99d27-7f06-4ab6-a270-70fe9869e5bb_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NlJa188FsqCFVquPOYyq2BcN0d4gJ/pHvoz5nyjBwMU="></script>
+    nonce="5fwcDiWLGce1/TfdqVEUSa8dFfEmrRIhluj/fwBBVIE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -144,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +157,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -199,7 +199,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1219583/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               112
@@ -214,14 +214,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1219583/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               112
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
