updated at: 2023-04-25 16:46, バレンタインチョコ - yamamama - BOOTH

--- a/VRChat/18/1219118.html
+++ b/VRChat/18/1219118.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "sEFx1/YI+pY9fQVYXmBjjMnU8vpS4X2at0H1Jiw+q3g="></script>
+    "I1kIt5AMaVL0i0/YmlpeL+VVb8GhF9w30qFODLEFWtQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バレンタインチョコ","description":"今年もやってきたバレンタイン！！！\nあの子あの人にVRchatでプレゼントしよう！\n\n△ポリゴン　4064\n改変可\n再配布禁止\n色はマテリアルで設定してあるため簡単に変更できます。\nUnityでそのまま使えます。\n〇内容物\n　FBXファイル\n　blenderファイル","url":"https://booth.pm/ja/items/1219118","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/2a8a21dd-55a1-4023-8bb0-2ef56d14029e/i/1219118/e9004b83-435b-47be-a51e-f402ec4a3911_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sEFx1/YI+pY9fQVYXmBjjMnU8vpS4X2at0H1Jiw+q3g="></script>
+    nonce="I1kIt5AMaVL0i0/YmlpeL+VVb8GhF9w30qFODLEFWtQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1219118/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1219118/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
