--- a/VRChat/48/1218548.html
+++ b/VRChat/48/1218548.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dIskZjegS6V+eZpxbEV3+92zBbacsL2+jAEeJdvtlVo="></script>
+    "Dfh1mYdHvsBB8dNvoFGzuLKS4VNINZiiSjNSXHngSI0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"タモン","description":"タイツから生まれた服物\n\n原作ではありません、もとは「上野さんは不器用」に出てくるキャラクターです","url":"https://booth.pm/ja/items/1218548","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e665438e-37aa-4bfb-bfa9-4a3e025e6113/i/1218548/cde2143b-2f68-4012-bde5-0081c28b7ff0_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dIskZjegS6V+eZpxbEV3+92zBbacsL2+jAEeJdvtlVo="></script>
+    nonce="Dfh1mYdHvsBB8dNvoFGzuLKS4VNINZiiSjNSXHngSI0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1218548/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               88
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1218548/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               88
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
