--- a/VRChat/70/1218370.html
+++ b/VRChat/70/1218370.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Njej935U+QKX2pso8PkQmKYeSjpPYolV5rnuuFbFqsg="></script>
+    "b134PCXieftw2sRqhCsF4hZ4CC5HsmNPmjX/VgbYcBM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"DT 車載機関銃（FBXファイル）△59610","description":"この商品はDT車載機関銃をモデリングしたものです。\n\n2021/12 追記\n商品画像を変更しました。\n\n△59610ポリゴン、テクスチャ同梱。\n\n●内容物  \n\n・fbxファイル『DT 車載機関銃』 \n・テクスチャ三枚(Albedo、ノーマルマップ、スペキュラー） \n\n またこれらのデータはzip形式で圧縮してあります。\n\n　＜利用規約＞ \n\n本モデルを使用したことによって生じるいかなる損害に対して等方は一切責任を負いません。 また、条件についての内容は予告なく変更する場合があります。\n\n  非改変での再配布、再販売、自作発言等は禁止です。 テクスチャ改変、モデル改変や商業への使用は大丈夫です。\n\nVRchat、改変、動画、同人などに使って下さい。","url":"https://booth.pm/ja/items/1218370","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8f9f026a-3963-4972-9b28-0d458c4521ab/i/1218370/220b8b93-61dd-49d9-adaf-45cfbfcbe510_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Njej935U+QKX2pso8PkQmKYeSjpPYolV5rnuuFbFqsg="></script>
+    nonce="b134PCXieftw2sRqhCsF4hZ4CC5HsmNPmjX/VgbYcBM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1218370/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               107
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1218370/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               107
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
