--- a/VRChat/00/1218300.html
+++ b/VRChat/00/1218300.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "G82NUJWdQiwbPiqk3TEYENeM+EdzYVEIu+i8GVodoyI="></script>
+    "knAOLnr/CpIGKbAMpCoKyVlmLP1ht0mvMOWTjpqHsYw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"猫アクセサリー","description":"VRChat使用想定　猫型バッジ＆ヘアピン\n\n\n内容物\n・猫アクセ.unitypackage\n・UVテンプレート\n\nモデル概要\n・バッジ\nポリゴン数：284\nマテリアル数：1\n\n・ヘアピン\nポリゴン数：532\nマテリアル数：1\n\n改変可・再配布不可です。\n\n\n☆更新\n2016/02/11 V1.1 \n　・readmeの文章にミスが有った為修正しました。\n　・ヘアピンの猫マークを逆に付けたものを追加しました。","url":"https://booth.pm/ja/items/1218300","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/c5e6ca9e-0060-44bc-918c-e161cccb358b/i/1218300/071be70c-d04d-4435-9250-7f5cbf65bda3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="G82NUJWdQiwbPiqk3TEYENeM+EdzYVEIu+i8GVodoyI="></script>
+    nonce="knAOLnr/CpIGKbAMpCoKyVlmLP1ht0mvMOWTjpqHsYw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1218300/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               159
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1218300/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               159
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
