--- a/VRChat/64/1216664.html
+++ b/VRChat/64/1216664.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UvYyRtBN7pD0aLGpR3PzI6iKTzDsmQwXYKrIrrYlBkg="></script>
+    "s7ihLlE2uymO5HfceNBC3NJGLB62KCLu5qyLEK5UALk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用3Dモデル【ジービィ\u0026ジーファ】","description":"更新履歴\n\n2019/02/07  unityプロジェクトデータを追加\n\n2019/02/11  リップシンクが正常に動作しない問題\n　　　　　　不要データの削除\n　　　　　　テクスチャの更新\n\n---------------------------------------------------------\nバーチャルマーケット2が終了まで3500円から3000円に値引き中です。\n---------------------------------------------------------\n\nオリジナル3Dモデル【ジービィ\u0026ジーファ】紹介文\n\n━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ \n□以下に説明、利用規約が記載されておりますので、\nご購入の前に必ずお読みいただき、ご確認の上でのご購入をお願いいたします。\n━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ \n\n\n━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ \n□商品内容□\n\n・gb_model.fbx（ポリゴン数11109）\n・gf_model.fbx\n\nジービィとジーファのモデルデータになります。\n\n※mayaで制作しておりますので、他ソフトでの編集する際の\n完全な互換は保障いたしかねます。誠に申し訳ございません。\n\n・body_tex.psd\n・body_tex.png\n\n・body_ao_tex_psd\n・body_ao_tex_png\n\nジービィとジーファの体テクスチャになります。\n\n・face_tex.psd\n・face_tex.png\n\n・face_tex_ao.psd\n・face_tex_ao.png\n\nジービィとジーファの顔テクスチャになります。\n\n・ac_tex.psd\n・ac_tex.png \n\nアクセサリーデータになります。\n\n・face_ka_tex.png\n・body_ka_tex.png\n\nテストで作成しました。褐色バージョンテクスチャになります。\nこちらのデータはpsdがない状態になります。\n\n\n・gb.unitypackage\n・gf.unitypackage\n\nモデル、テクスチャ、dynamicbone設定やシェーダーの設定が含まれるunityパッケージデータになります。\n\n・DynamicBoneについて\n\nunitypackageにて設定済みですが、DynamicBoneを\nアセットストアよりご購入いただき、導入済みでなければ設定が反映されませんのでご了承くださいませ。\n導入されていない場合、尻尾が動きません。\n\n・フルトラッキングについて\n対応済みです。\n\n・表情について\n以下のものが設定してあります。\n\nVRChat用のリップシンク\n表情　6種\n\n表情の種類は複数ありますので好みに合わせて調整する事が\n可能となっております。\n\n\n・シェーダーについて\n\nユニティちゃんトゥーンシェーダーver.2.0.5を使用しております。\n\n━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ \n\n□導入方法□\n\n【導入方法】\n1. Unity 2017.4.15f1 で新規のプロジェクトを作成してください\n\n2. VRCSDKとDynamicBoneをを予めインポートしておいてください。\n※ DynamicBoneは任意です。\n\n3. gb.unitypackageをインポートしてください。\n\n4. インポートが完了しましたらgb_unity/gb/Assets/gbシーンを開いてアップロードをしてください。\n\n━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ \n\n\n□ 営利利用: 可能\n\n□ 改変: 可能\n   改造モデルの再配布、販売を禁じます。\n改造モデル著作権はRGB工房に帰属するものとします。\n\n□ R-18, R-18Gコンテンツでの利用: 可能\n\n□ 再配布: 禁止\n\n□ VRChatのアバターペデスタルでの利用: 禁止\n   購入者以外が自由に本モデルを\n使用することができるような行為を禁止いたします。\n\n□ 政治、宗教活動、他者に対する誹謗中傷目的での使用を禁止します。\n\n□ 本モデル、改造モデルを使用することによって生じた何らかのトラブル、損失に対しRGB工房は一切責任を負わないものとします。","url":"https://booth.pm/ja/items/1216664","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/1e7f941d-cb24-4723-97d2-bf8684b199d3/i/1216664/02725857-0bed-4676-9772-bbea77828594_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UvYyRtBN7pD0aLGpR3PzI6iKTzDsmQwXYKrIrrYlBkg="></script>
+    nonce="s7ihLlE2uymO5HfceNBC3NJGLB62KCLu5qyLEK5UALk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1216664/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               209
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1216664/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               209
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
