updated at: 2023-04-25 16:48, オリジナル3Dモデル 「NEON」(ネオン) - NamCraft - BOOTH

--- a/VRChat/14/1217414.html
+++ b/VRChat/14/1217414.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4fp98gik2tfPm4JhS2IXAhc826XOtuUC9d38UJ2Aqkc="></script>
+    "wk5S35lVQD73b+6kYG55t1r4tDQbuqiSANGYa7rLXy0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル 「NEON」(ネオン)","description":"！！注意！！\nこちらの商品は現在VRChatSDK2でセットアップされています。\n\n\nNEON用素体+水着を販売開始しました。\nhttps://namzaru-shop.booth.pm/items/1467618\n\n\n■ドラゴン娘アバター「NEON」■\n\nVRChatなどのアバターとして利用することを想定したUnity用3Dモデルです。\nHumanoid形式、VRChatとDynamic Boneのセットアップ済みです。\n(VRChatSDKとDynamic Boneは本モデルに含まれていません)\n商用利用、配信などの活動での使用可\n\nポリゴン数：19555\nマテリアル数：5\nシェイプキー数：47＋リップシンク用シェイプキー\nフルトラッキングに対応したボーン構造です。\nシェーダーはArktoon shaderを使用しています。\n\n髪・角パーツ・各部テクスチャにそれぞれ二つのバリエーションがあります。\n\n\n■ファイル内容■\n\nVRChat用にメッシュを統合したfbxファイル2種\n改変用にメッシュを統合していないfbxファイルとblendファイル\nセットアップ済みのsceneファイルとprefabを含むunitypackage\n各種テクスチャとclip及びpsdファイル\n別途販売の素体用に合わせた顔メッシュのfbxファイルとblendファイル\n","url":"https://booth.pm/ja/items/1217414","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/7ddc5b4a-9e11-4455-8c2c-7607cc08cbcf/i/1217414/31df0b5d-f0d3-424d-89d1-6724db0409f2_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4fp98gik2tfPm4JhS2IXAhc826XOtuUC9d38UJ2Aqkc="></script>
+    nonce="wk5S35lVQD73b+6kYG55t1r4tDQbuqiSANGYa7rLXy0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,10 +173,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1217414/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              654
+                              655
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1217414/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              654
+                              655
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
