updated at: 2023-04-25 16:50, 【別売版】オリジナル３Dモデル「ソーラス」Ver Valentine - 月面平城京 - BOOTH

--- a/VRChat/95/1215395.html
+++ b/VRChat/95/1215395.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "lcMZoZms83NNBLuES13VQj/gzsJpWsOxV5d2+TBA6YE="></script>
+    "fTHU/cu5XfzqYXgZDT2R2ENbflxyAA6tNWsnBv5nQ2I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【別売版】オリジナル３Dモデル「ソーラス」Ver Valentine","description":"2/5より追加したバレンタイン版の別売版です。\nアーガイル柄は商用可能素材を利用しています。\n\n別売版を用意してますが普通にhttps://tyosokuhouse.booth.pm/items/992013\nの総合版の購入をお勧めします、全部入りで２４００円です。\n\nおまけでハート型のチョコを腰から下げてもらいました。これは無料でさらに別に配布しますので欲しい方はそちらを。","url":"https://booth.pm/ja/items/1215395","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2200"},"image":"https://booth.pximg.net/c/620x620/64446b0b-9225-4dba-a979-4708b93cc2ef/i/1215395/3d0d160f-e31a-4bcf-a189-1f2725eb52d8_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lcMZoZms83NNBLuES13VQj/gzsJpWsOxV5d2+TBA6YE="></script>
+    nonce="fTHU/cu5XfzqYXgZDT2R2ENbflxyAA6tNWsnBv5nQ2I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1215395/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               46
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1215395/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               46
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
