updated at: 2023-04-25 16:50, Sushi - さかなや - BOOTH

--- a/VRChat/51/1215251.html
+++ b/VRChat/51/1215251.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "D7o7uqcKEWFxaznWTTr/5LkfDDvybiOmlgFSX010EvE="></script>
+    "rlFMKNBJ/QkOT/wyMXTeUzOS/66WzwD3bbwRSt099bc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Sushi","description":"Sushi 回ってるタイプの寿司。\n皿は結構上手に作れた気がします。\n改変OK、改変後の再配布はこのページを明記していただければOKです。\nネタの色を変えてイカとかマグロとか作るのがオススメです。","url":"https://booth.pm/ja/items/1215251","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3e5d3959-13e0-495e-b172-ec5a9e33d076/i/1215251/ac1c8d3b-695f-410c-9f7a-6303a5c97f5d_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="D7o7uqcKEWFxaznWTTr/5LkfDDvybiOmlgFSX010EvE="></script>
+    nonce="rlFMKNBJ/QkOT/wyMXTeUzOS/66WzwD3bbwRSt099bc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -138,6 +138,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1215251/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               117
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1215251/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               117
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
