updated at: 2023-04-25 16:50, 洋ドラでクビになったやつが私物入れてる箱 - Rockout inds./ロックアウト インダストリーズ - BOOTH

--- a/VRChat/94/1214794.html
+++ b/VRChat/94/1214794.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "b0dkVlEdjOj5VCIRLKoXtsRNdrEwCYrMQSQip3h3+BI="></script>
+    "3Tc+eQNmIlqe838RG4uEQZ/iOXcl7hm7Mzw1dSeLd4Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"洋ドラでクビになったやつが私物入れてる箱","description":"洋ドラでクビになったやつが私物入れてる箱です。\n\nクビになって私物入れた箱を持ちながら元同僚から憐れみの目で見られたい時にご利用ください。","url":"https://booth.pm/ja/items/1214794","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/1b1a42d9-d78b-40e1-821f-cf3ab20d0f73/i/1214794/3c704446-0531-4f11-8045-e8d8559ca64f_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="b0dkVlEdjOj5VCIRLKoXtsRNdrEwCYrMQSQip3h3+BI="></script>
+    nonce="3Tc+eQNmIlqe838RG4uEQZ/iOXcl7hm7Mzw1dSeLd4Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1214794/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               59
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1214794/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               59
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
