updated at: 2023-04-25 16:51, ロールプレイ用アバター・虚無僧くん - 柚吉堂 - BOOTH

--- a/VRChat/36/1214236.html
+++ b/VRChat/36/1214236.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "poakRLfULBeSa+X2rS7CB91ugdAlviNyLIVcPUACO0g="></script>
+    "0U8pEcrx5atWer7kGRhn+wFYrJUqkJHiSmeR6LosBuo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ロールプレイ用アバター・虚無僧くん","description":"VRCでロールプレイしたいがどんなロールをするかお悩みのあなた！\n\nそんなあなたにうってつけ！虚無僧ロールプレイがすぐにできるセットの登場\n\n虚無僧となって尺八・お鈴・三線・鈴を鳴らし活動しよう!!\n付属の楽器類はご自由に別アバターへの換装を行ってください\n\nVRで楽しく元気にロールプレイを\n\n＊音声等は各自調達を","url":"https://booth.pm/ja/items/1214236","offers":{"priceCurrency":"JPY","@type":"Offer","price":"540"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1214236/ac5a50fe-9be7-4d58-9710-990e4d40e6e5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="poakRLfULBeSa+X2rS7CB91ugdAlviNyLIVcPUACO0g="></script>
+    nonce="0U8pEcrx5atWer7kGRhn+wFYrJUqkJHiSmeR6LosBuo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1214236/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1214236/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
